# claude-self-reflect

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.mcp-server  Dockerfile.watcher  LICENSE  MCP_REFERENCE.md  README.md  SECURITY.md  docker-compose.yaml  pyproject.toml  run-mcp-docker.sh  test-mcp-search.sh  test_complete_functionality.py  test_server_startup.py
.claude/agents/: README.md  docker-orchestrator.md  documentation-writer.md  import-debugger.md  mcp-integration.md  open-source-maintainer.md  performance-tuner.md  qdrant-specialist.md  reflect-tester.md  reflection-specialist.md  search-optimizer.md
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
docs/: TZ-import-watcher-smart.md  advanced-usage.md  api-reference.md  architecture-details.md  chunking-analysis.md  components.md  installation-guide.md  meme-prompt.md  memory-decay.md  migration-to-multilingual-e5-large.md  motivation-and-history.md  project-scoped-search.md  troubleshooting.md  updated_plan.md
docs/diagrams/: before-after-combined.mmd  before-after-sequence.md
docs/images/: README.md
docs/operations/: SECURITY_NOTICE.md
docs/testing/: project-scoped-search-validation.md
docs/troubleshooting/: CI_FIX_SUMMARY.md
mcp-server/: README.md  check_tools.py  pyproject.toml  requirements.txt  run-mcp.sh  test_mcp.py  test_server.py
mcp-server/src/: __init__.py  __main__.py  server.py
mcp-server/tests/: test_complete_functionality.py  test_integration_mcp_qdrant.py  test_integration_search_scenarios.py  test_server_startup.py  test_server_unit.py
scripts/: README.md  analyze-search-quality.py  check-collections.py  collection-metadata-manager.py  find-optimal-threshold.py  import-conversations-unified.py  import-watcher-smart.py  import-watcher-smart.py.orig  monitor-search-performance.py  requirements.txt  test-mcp-debug.py  test-project-search.py  test-tags-filtering.py  test-text-normalization.py  test-timestamp-normalization.py  transfer-collection.py  validate-setup.py
tests/: test_ci_workflow.py  test_github_ci_workflow.py
tests/docs/: TESTING_CI_WORKFLOW_NOTES.txt
