[project]
name = "claude-self-reflect-mcp"
version = "0.1.0"
description = "MCP server for Claude self-reflection with memory decay"
# readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Claude Self Reflect Team" }
]
dependencies = [
    "fastmcp>=0.0.7",
    "qdrant-client>=1.7.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.9.2,<3.0.0",  # Pin to avoid CVE-2024-3772
    "pydantic-settings>=2.0.0,<3.0.0",
    "fastembed>=0.4.0,<1.0.0",
]

[project.scripts]
claude-self-reflect-mcp = "src.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"