[project]
name = "claude-self-reflect-mcp"
version = "0.2.0"
description = "MCP server for Claude self-reflection with semantic search and memory decay"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
    "mcp",
    "claude",
    "semantic-search",
    "vector-database",
    "memory",
    "qdrant",
    "embeddings",
    "fastmcp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO"
]
dependencies = [
    "fastmcp>=0.0.7",
    "qdrant-client>=1.7.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.9.2,<3.0.0",  # Pin to avoid CVE-2024-3772
    "pydantic-settings>=2.0.0,<3.0.0",
    "fastembed>=0.4.0,<1.0.0",
]

[project.scripts]
claude-self-reflect-mcp = "src.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 230
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = []
